--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,29 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/calculo_aposentadoria"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView"
         android:layout_width="315dp"
         android:layout_height="80dp"
         android:layout_marginBottom="35dp"
         android:gravity="center_horizontal"
         android:text="@string/textView"
+        android:fontFamily="@font/chewy"
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TextSizeCheck" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="345dp"
         android:layout_height="75dp"
+        android:fontFamily="@font/chewy"
         android:layout_marginTop="150dp"
         android:gravity="center_horizontal"
         android:text="@string/textView_"
@@ -41,22 +44,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
+        android:fontFamily="@font/chewy"
         android:text="@string/escolha_o_sexo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <Spinner
         android:id="@+id/spinner_sexo"
         android:layout_width="290dp"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
+        android:theme="@style/chewyFont"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.314"
+        app:layout_constraintHorizontal_bias="0.264"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewSexo"
         tools:ignore="TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/text_view_idade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/chewy"
+        android:text="@string/textViewIdade"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_sexo" />
 
     <EditText
         android:id="@+id/edit_text_idade"
@@ -65,31 +82,65 @@
         android:layout_marginTop="32dp"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/chewy"
         android:hint="@string/hint"
         android:inputType="number"
         android:minHeight="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintHorizontal_bias="0.190"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/text_view_idade" />
 
     <TextView
-        android:id="@+id/text_view_idade"
+        android:id="@+id/text_view_contrib"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="@string/textViewIdade"
+        android:layout_marginTop="70dp"
+        android:fontFamily="@font/chewy"
+        android:text="@string/textViewContrib"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_sexo" />
+        app:layout_constraintTop_toTopOf="@+id/edit_text_idade" />
+
+    <EditText
+        android:id="@+id/edit_text_contrib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:fontFamily="@font/chewy"
+        android:hint="@string/hintContrib"
+        android:inputType="number"
+        android:minHeight="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.190"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_view_contrib" />
+
+    <Button
+        android:id="@+id/button_calcular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="95dp"
+        android:background="@color/purple_500"
+        android:fontFamily="@font/chewy"
+        android:text="@string/button"
+        android:textColor="@color/white"
+        app:cornerRadius="45dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/edit_text_contrib" />
 
     <TextView
         android:id="@+id/text_view_resultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="90dp"
         android:gravity="center_horizontal"
+        android:fontFamily="@font/chewy"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="20sp"
@@ -97,44 +148,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button_calcular"
         tools:ignore="VisualLintBounds" />
-
-    <TextView
-        android:id="@+id/textViewContrib"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="69dp"
-        android:text="@string/textViewContrib"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.183"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edit_text_idade" />
-
-    <EditText
-        android:id="@+id/editTextNumberContrib"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/hintContrib"
-        android:inputType="number"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.189"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewContrib" />
-
-    <Button
-        android:id="@+id/button_calcular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:background="@color/purple_500"
-        android:text="@string/button"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editTextNumberContrib" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
